src/test/deca/context/invalid/obj/declmethod/test_method_wrong_signature.deca
// Description:
//    declaration d'une methode avec un mauvaise signature
//
// Resultats:
//   Override impossible, verifiez la signature de votre fonction
// 
// Historique:
//    cree le 01/01/2024

class A{
    int equals(int a, int b){
        return 0;
    }
}
